--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam (Leon S. Kennedy) - Profile</title>
+    <meta property="og:title" content="Adam’s Domain - Check before interacting" />
+    <meta property="og:description" content="This is a roleplay account." />
+    <meta property="og:image" content="https://adamada.site/leon.jpg" />
+    <meta property="og:url" content="https://adamada.site" />
+    <meta property="og:type" content="website" />
+    <title>Adam</title>
     <style>
         * {
             margin: 0;
@@ -152,17 +157,27 @@
             margin: 0 auto;
         }
 
+        /* Section Header */
         .section-header {
             display: flex;
+            justify-content: center;
             align-items: center;
             margin-bottom: 1.5rem;
+            text-align: center;
         }
 
         .section-icon {
-            width: 1.5rem;
-            height: 1.5rem;
+            width: 2rem;
+            height: 2rem;
             margin-right: 0.75rem;
-            color: #9ca3af;
+            color: #ef4444;
+            /* Red accent to match tags */
+            transition: transform 0.3s ease, color 0.3s ease;
+        }
+
+        .section-icon:hover {
+            transform: scale(1.2);
+            color: #fff;
         }
 
         .section-title {
@@ -171,6 +186,7 @@
             color: #fff;
             text-transform: uppercase;
             letter-spacing: 0.1em;
+            text-align: center;
         }
 
         .music-player {
@@ -256,7 +272,7 @@
         }
 
         .galleries-container {
-            max-width: 96rem;
+            max-width: 500rem;
             margin: 0 auto;
         }
 
@@ -311,6 +327,116 @@
 
         .gallery-item:hover .gallery-overlay {
             opacity: 1;
+        }
+
+        /* Slideshow Styles */
+        .slideshow-container {
+            position: relative;
+            max-width: 100%;
+            margin: auto;
+            overflow: hidden;
+            border-radius: 0.5rem;
+        }
+
+        .slide {
+            display: none;
+            width: 100%;
+            position: relative;
+        }
+
+        .slide-img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .slide-img:hover {
+            opacity: 0.9;
+        }
+
+        .category-overlay {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 8px 16px;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            transition: background 0.3s ease;
+        }
+
+        .category-overlay:hover {
+            background: rgba(0, 0, 0, 0.9);
+        }
+
+        .prev,
+        .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: auto;
+            padding: 16px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.3s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+
+        .prev:hover,
+        .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        .dots {
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .dot {
+            cursor: pointer;
+            height: 12px;
+            width: 12px;
+            margin: 0 5px;
+            background-color: #6b7280;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+        }
+
+        .dot:hover,
+        .active {
+            background-color: #fff;
+        }
+
+        /* Ensure first slide is visible */
+        .slide:first-child {
+            display: block;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .slide-img {
+                height: 200px;
+            }
+
+            .category-overlay {
+                font-size: 1rem;
+                padding: 6px 12px;
+            }
         }
 
         /* Footer Quote */
@@ -373,10 +499,16 @@
                 <span>25+ • He/Him • Straight • EN/ID</span>
             </div>
             <div class="tags animate-fadeInUp delay-4">
-                <span>MINOR DNI</span>
-                <span>R18</span>
-                <span>SLOW RESPONSE</span>
-                <span>OOC</span>
+                <span
+                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">MINOR
+                    DNI</span>
+                <span
+                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">R18</span>
+                <span
+                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">SLOW
+                    RESPONSE</span>
+                <span
+                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">OOC</span>
             </div>
         </div>
     </div>
@@ -395,20 +527,21 @@
     <div class="music-section">
         <div class="section-container animate-fadeInUp delay-6">
             <div class="section-header">
-                <svg class="section-icon icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 18V5l12-2v13"></path>
-                    <circle cx="6" cy="18" r="3"></circle>
-                    <circle cx="18" cy="16" r="3"></circle>
+                <svg class="section-icon icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="3" y1="6" x2="14" y2="6"></line>
+                    <line x1="3" y1="12" x2="14" y2="12"></line>
+                    <line x1="3" y1="18" x2="11" y2="18"></line>
+                    <polygon points="16,4 22,8 16,12 16,4"></polygon>
                 </svg>
-                <h3 class="section-title">Music</h3>
-            </div>
 
+                <h3 class="section-title">Playlists</h3>
+            </div>
             <div class="music-player">
                 <div class="track-info">
-                    <h4 class="track-title" id="trackTitle">Numb</h4>
-                    <p class="track-artist" id="trackArtist">Linkin Park</p>
+                    <h4 class="track-title" id="trackTitle">Bonebreaker</h4>
+                    <p class="track-artist" id="trackArtist">Slaughter to Prevail</p>
                 </div>
-
                 <div class="player-controls">
                     <button class="control-btn" id="prevBtn">
                         <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -433,7 +566,6 @@
                         </svg>
                     </button>
                 </div>
-
                 <div class="progress-bar">
                     <span id="currentTime">0:00</span>
                     <div class="progress-track">
@@ -441,74 +573,59 @@
                     </div>
                     <span id="duration">0:00</span>
                 </div>
-
                 <audio id="audioPlayer" preload="metadata">
-                    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+                    <source src="Bonebreaker.mp3" type="audio/mpeg">
                 </audio>
             </div>
         </div>
     </div>
 
-    <!-- Galleries -->
+    <!-- Interests Slideshow -->
     <div class="galleries-section">
         <div class="galleries-container">
-            <!-- Gaming Gallery -->
             <div class="gallery animate-fadeInUp">
                 <div class="section-header">
                     <svg class="section-icon icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                         stroke-width="2">
-                        <line x1="6" y1="11" x2="10" y2="11"></line>
-                        <line x1="8" y1="9" x2="8" y2="13"></line>
-                        <line x1="15" y1="12" x2="15.01" y2="12"></line>
-                        <line x1="18" y1="10" x2="18.01" y2="10"></line>
-                        <rect width="20" height="12" x="2" y="6" rx="2"></rect>
+                        <path
+                            d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                        </path>
                     </svg>
-                    <h3 class="section-title">Gaming</h3>
+                    <h3 class="section-title">Interests</h3>
                 </div>
-                <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=300&h=200&fit=crop"
-                            alt="Gaming 1" class="gallery-img">
-                        <div class="gallery-overlay"></div>
+                <div class="slideshow-container">
+                    <div class="slide">
+                        <img src="./console.jpg" alt="Gaming" class="slide-img">
                     </div>
-                </div>
-            </div>
+                    <div class="slide">
+                        <img src="./kb.jpg" alt="Gaming" class="slide-img">
 
-            <!-- Coding Gallery -->
-            <div class="gallery animate-fadeInUp">
-                <div class="section-header">
-                    <svg class="section-icon icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2">
-                        <polyline points="16,18 22,12 16,6"></polyline>
-                        <polyline points="8,6 2,12 8,18"></polyline>
-                    </svg>
-                    <h3 class="section-title">Coding</h3>
-                </div>
-                <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=300&h=200&fit=crop"
-                            alt="Coding 4" class="gallery-img">
-                        <div class="gallery-overlay"></div>
                     </div>
-                </div>
-            </div>
+                    <div class="slide">
+                        <img src="./re.jpg" alt="Gaming" class="slide-img">
 
-            <!-- Chess Gallery -->
-            <div class="gallery animate-fadeInUp">
-                <div class="section-header">
-                    <svg class="section-icon icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2">
-                        <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
-                        <line x1="3" y1="6" x2="21" y2="6"></line>
-                        <path d="M16 10a4 4 0 0 1-8 0"></path>
-                    </svg>
-                    <h3 class="section-title">Chess</h3>
-                </div>
-                <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1528819622765-d6bcf132f793?w=300&h=200&fit=crop"
-                            alt="Chess 4" class="gallery-img">
-                        <div class="gallery-overlay"></div>
+                    </div>
+                    <div class="slide">
+                        <img src="./code.jpg" alt="Coding" class="slide-img">
+
+                    </div>
+                    <div class="slide">
+                        <img src="./op.jpeg" alt="Anime" class="slide-img">
+
+                    </div>
+                    <div class="slide">
+                        <img src="./chess.jpg" alt="Chess" class="slide-img">
+
+                    </div>
+                    <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+                    <a class="next" onclick="changeSlide(1)">&#10095;</a>
+                    <div class="dots">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                        <span class="dot" onclick="currentSlide(4)"></span>
+                        <span class="dot" onclick="currentSlide(5)"></span>
+                        <span class="dot" onclick="currentSlide(6)"></span>
                     </div>
                 </div>
             </div>
@@ -529,10 +646,12 @@
     <script>
         // Music Player Functionality
         const playlist = [
-            { title: "Numb", artist: "Linkin Park", src: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" },
-            { title: "In The End", artist: "Linkin Park", src: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" },
-            { title: "Breaking The Habit", artist: "Linkin Park", src: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" },
-            { title: "Crawling", artist: "Linkin Park", src: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-4.mp3" }
+            { title: "Bonebreaker", artist: "Slaughter to Prevail", src: "./Bonebreaker.mp3" },
+            { title: "I AM A LIAR", artist: "Tothegood", src: "./I AM A LIAR.mp3" },
+            { title: "Words I Never Had The Strength To Tell You", artist: "departmefrombearisland", src: "./Words I Never Had The Strength To Tell You.mp3" },
+            { title: "Change (In the House of Flies)", artist: "Deftones", src: "./Change In the House of Flies.mp3" },
+            { title: "Freak On a Leash", artist: "Korn", src: "./Freak On a Leash.mp3" },
+            { title: "Save Room", artist: "Masami Ueda", src: "./Save Room.mp3" },
         ];
 
         let currentTrack = 0;
@@ -644,6 +763,51 @@
                 });
             });
         });
+
+        // Interests Slideshow Functionality
+        let currentSlideIndex = 1;
+        let autoSlide;
+
+        function showSlide(index) {
+            const slides = document.querySelectorAll('.slide');
+            const dots = document.querySelectorAll('.dot');
+
+            if (index > slides.length) index = 1;
+            if (index < 1) index = slides.length;
+
+            slides.forEach((slide, i) => {
+                slide.style.display = (i + 1 === index) ? 'block' : 'none';
+            });
+
+            dots.forEach((dot, i) => {
+                dot.className = dot.className.replace(' active', '');
+                if (i + 1 === index) dot.className += ' active';
+            });
+
+            currentSlideIndex = index;
+        }
+
+        function changeSlide(n) {
+            clearInterval(autoSlide);
+            showSlide(currentSlideIndex + n);
+            startAutoSlide();
+        }
+
+        function currentSlide(n) {
+            clearInterval(autoSlide);
+            showSlide(n);
+            startAutoSlide();
+        }
+
+        function startAutoSlide() {
+            autoSlide = setInterval(() => {
+                changeSlide(1);
+            }, 5000); // Change slide every 5 seconds
+        }
+
+        // Initialize slideshow
+        showSlide(currentSlideIndex);
+        startAutoSlide();
     </script>
 </body>
 
