--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Adam’s Domain - Check before interacting" />
     <meta property="og:description" content="This is a roleplay account." />
-    <meta property="og:image" content="https://adamada.site/leon.jpg" />
+    <meta property="og:image" content="https://adamada.site/leonrpd.jpg" />
     <meta property="og:url" content="https://adamada.site" />
     <meta property="og:type" content="website" />
     <title>Adam</title>
@@ -500,10 +500,7 @@
             </div>
             <div class="tags animate-fadeInUp delay-4">
                 <span
-                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">MINOR
-                    DNI</span>
-                <span
-                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">R18</span>
+                    style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">MDNI</span>
                 <span
                     style="background: linear-gradient(90deg, #ef4444 60%, #b91c1c 100%); color: #fff; padding: 0.25em 0.75em; border-radius: 0.5em; font-weight: 500; box-shadow: 0 2px 8px rgba(239,68,68,0.15);">SLOW
                     RESPONSE</span>
