--- a/index.html
+++ b/index.html
@@ -644,10 +644,14 @@
         const playlist = [
             { title: "Bonebreaker", artist: "Slaughter to Prevail", src: "./Bonebreaker.mp3" },
             { title: "I AM A LIAR", artist: "Tothegood", src: "./I AM A LIAR.mp3" },
-            { title: "Words I Never Had The Strength To Tell You", artist: "departmefrombearisland", src: "./Words I Never Had The Strength To Tell You.mp3" },
-            { title: "Change (In the House of Flies)", artist: "Deftones", src: "./Change In the House of Flies.mp3" },
             { title: "Freak On a Leash", artist: "Korn", src: "./Freak On a Leash.mp3" },
-            { title: "Save Room", artist: "Masami Ueda", src: "./Save Room.mp3" },
+            { title: "13STAIRS[-]1", artist: "the GazettE", src: "./13STAIRS-1.mp3" },
+            { title: "abnormalize", artist: "Ling tosite sigure", src: "./abnormalize.mp3" },
+            { title: "Change (In the House of Flies)", artist: "Deftones", src: "./Change In the House of Flies.mp3" },
+            { title: "Words I Never Had The Strength To Tell You", artist: "departmefrombearisland", src: "./Words I Never Had The Strength To Tell You.mp3" },
+            { title: "Your Death Make Me Wish Heaven Was Real", artist: "Frail Body", src: "./ydmmwhwr.mp3" },
+            { title: "Undenied", artist: "Portishead", src: "./Undenied.mp3" },
+            { title: "True", artist: "Akira Yamaoka", src: "./True.mp3" },
         ];
 
         let currentTrack = 0;
