--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
             { title: "abnormalize", artist: "Ling tosite sigure", src: "./abnormalize.mp3" },
             { title: "Change (In the House of Flies)", artist: "Deftones", src: "./Change In the House of Flies.mp3" },
             { title: "Words I Never Had The Strength To Tell You", artist: "departmefrombearisland", src: "./Words I Never Had The Strength To Tell You.mp3" },
-            { title: "Your Death Make Me Wish Heaven Was Real", artist: "Frail Body", src: "./ydmmwhwr.mp3" },
+            { title: "Your Death Makes Me Wish Heaven Was Real", artist: "Frail Body", src: "./ydmmwhwr.mp3" },
             { title: "Undenied", artist: "Portishead", src: "./Undenied.mp3" },
             { title: "True", artist: "Akira Yamaoka", src: "./True.mp3" },
         ];
