--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
         }
 
         h1 {
-            font-size: 4rem;
+            font-size: clamp(2rem, 8vw, 4rem);
             letter-spacing: 0.1em;
             font-weight: 300;
-            margin-bottom: 1rem;
+            margin: 0 2rem 1rem 2rem;
             animation: fadeInUp 1s ease-out forwards;
         }
 
         p {
             color: #9ca3af;
-            font-size: 1.2rem;
-            max-width: 600px;
+            font-size: clamp(1rem, 4vw, 1.2rem);
+            max-width: 90vw;
+            margin: 0 2rem;
             line-height: 1.6;
             animation: fadeInUp 1.5s ease-out forwards;
         }
