slight change in warning modal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Adam’s Domain - Check before interacting" />
-    <meta property="og:image" content="https://adamada.site/userinfo.jpg" />
+    <meta property="og:image" content="https://adamada.site/uinfo.png" />
     <title>Adam | Leon S. Kennedy</title>
     <script>
         document.addEventListener('contextmenu', e => e.preventDefault());
@@ -953,8 +953,8 @@
             <p><strong>This is a ROLEPLAY account portraying Leon S. Kennedy.</strong></p>
             <p>• MDNI (Minors Do Not Interact)<br>
                 • Slow responses due to real life<br>
-                • I operate both IC (In Character) and mostly OOC (Out Of Character)<br>
-                • Please respect boundaries and understand this is fiction</p>
+                • I operate both in-character and out-of-character (primarily the latter)<br>
+                • Please respect boundaries</p>
             <button class="warning-btn" onclick="closeWarning()">I UNDERSTAND & AGREE</button>
         </div>
     </div>
