--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Adam’s Domain - Check before interacting" />
+    <meta property="og:description" content="This is a roleplay account." />
     <meta property="og:image" content="https://adamada.site/uinfo.png" />
     <title>Adam | Leon S. Kennedy</title>
     <script>
