--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="▸Adam info" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="Adam info" />
+    <meta property="og:description" content="This is a roleplay account." />
 
     <title>Adam | Leon S. Kennedy</title>
     <script>
