--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Adam info" />
-    <meta property="og:description" content="This is a roleplay account." />
+    <meta property="og:title" content="Starting game..." />
+    <meta property="og:description" content="Leon S. Kennedy — portrayed by Adam 🎮" />
+     <meta property="og:image" content="https://adamada.site/play.jpeg" />
 
     <title>Adam | Leon S. Kennedy</title>
     <script>
