--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         .hp-fill {
             height: 100%;
-            background: linear-gradient(90deg, var(--re-green), var(--re-blood));
+            background: linear-gradient(90deg, var(--re-blood), var(--re-green));
             width: 50%;
             animation: pulse 1s ease-in-out infinite;
             box-shadow: 0 0 10px rgba(255, 0, 0, 0.6), inset 0 0 8px rgba(255, 0, 0, 0.3);
