--- a/index.html
+++ b/index.html
@@ -787,7 +787,8 @@
                 <div class="stats-grid">
                     <div class="stat-box">
                         <span class="stat-label">AGE:</span>
-                        <span class="stat-value">LATE 30s | MID 20s (OP)</span>
+                        <span class="stat-value">LATE 30s<span style="font-size: 8px;">(CHARACTER)</span><br><br>
+                            MID 20s<span style="font-size: 8px;">(PLAYER)</span></span>
                     </div>
                     <div class="stat-box">
                         <span class="stat-label">OCCUPATION:</span>
