--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
     <div class="login-modal" id="loginModal">
         <div class="login-box">
             <span class="close-btn" onclick="closeLogin()">&times;</span>
-            <div class="login-title">ADMIN ACCESS</div>
+            <div class="login-title">ADAM ACCESS</div>
             <input type="email" id="adminEmail" class="terminal-input" placeholder="Email">
             <input type="password" id="adminPassword" class="terminal-input" placeholder="Password">
             <button class="terminal-button" onclick="loginAdmin()" style="width: 100%;">LOGIN</button>
@@ -935,7 +935,7 @@
                         <button type="submit" class="terminal-button" style="width: 100%;">TRANSMIT MESSAGE</button>
                     </form>
 
-                    <button class="unlock-btn" onclick="openLogin()">🔐 ADMIN ACCESS - VIEW ALL TRANSMISSIONS</button>
+                    <button class="unlock-btn" onclick="openLogin()">🔐 ADAM ACCESS - VIEW ALL TRANSMISSIONS</button>
                 </div>
 
                 <div class="message-log" id="messageLog">
